# invoy

./: .earthlyignore  .gitignore  Cargo.toml  Earthfile  README.md  Taskfile.yml
invoy/: pubspec.yaml
invoy/android/app/: build.gradle.kts
invoy/android/app/src/main/: AndroidManifest.xml
invoy/integration_test/: simple_test.dart
invoy/ios/Runner/: Info.plist
invoy/ios/Runner.xcodeproj/: project.pbxproj
invoy/lib/: main.dart  state.dart  util.dart
invoy/lib/src/rust/: err.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
invoy/lib/src/rust/api/: simple.dart
invoy/linux/: CMakeLists.txt
invoy/linux/flutter/: generated_plugins.cmake
invoy/linux/runner/: my_application.cc
invoy/macos/Runner.xcodeproj/: project.pbxproj
invoy/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
invoy/macos/Runner/Configs/: AppInfo.xcconfig
invoy/rust/: Cargo.toml  Earthfile
invoy/rust/src/: frb_generated.rs  gs.rs  lib.rs  pdf_components_util.rs
invoy/rust/src/api/: simple.rs
invoy/rust_builder/: pubspec.yaml
invoy/rust_builder/android/: build.gradle  settings.gradle
invoy/rust_builder/ios/: rust_lib_invoy.podspec
invoy/rust_builder/linux/: CMakeLists.txt
invoy/rust_builder/macos/: rust_lib_invoy.podspec
invoy/rust_builder/windows/: CMakeLists.txt
invoy/web/: index.html  manifest.json
invoy/windows/: CMakeLists.txt
invoy/windows/flutter/: generated_plugins.cmake
invoy/windows/runner/: Runner.rc  main.cpp
src/: builder_util.rs  err.rs  main.rs  win_stuff.rs
(+2 files in other folders)
