[package]
name = "paper_mache"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
directories = "6.0.0"
freedesktop-icons = "0.4.0"
iced = { version = "0.13.1", features = ["default", "image", "svg"] }
regex = "1.11.1"
regex-macro = "0.3.0"
rfd = "0.15.3"
thiserror = "2.0.12"

[build-dependencies]
glib-build-tools = "0.20.0"
