[package]
name = "rust_lib_invoy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
directories = "6.0.0"
flutter_rust_bridge = "=2.10.0"
rayon = "1.10.0"
regex = "1.11.1"
regex-macro = "0.3.0"
rfd = "0.15.3"
thiserror = "2.0.12"
walkdir = "2.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
